--- a/style.css
+++ b/style.css
@@ -4,271 +4,631 @@
   font-family: "Roboto", sans-serif;
 }
 
-.container {
-  width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("https://github.com/developersamuelakram/First-WebPage---HTML-CSS/blob/master/myimage.jpg?raw=true");
-  background-position: center;
-  background-size: cover;
-  padding-left: 8%;
-  padding-right: 8%;
-  box-sizing: border-box;
+@media screen and (min-device-width: 1000px) and (max-device-width: 2000px) and (-webkit-min-device-pixel-ratio: 1) {
+  * {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+  }
+
+  .container {
+    width: auto;
+    height: 96vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("https://github.com/developersamuelakram/First-WebPage---HTML-CSS/blob/master/myimage.jpg?raw=true");
+    background-position: center;
+    background-size: cover;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+  }
+
+  .btns {
+    height: 40px;
+    background-color: black;
+    width: 100px;
+    color: white;
+    border-radius: 30px;
+    margin-left: 35px;
+    margin-top: 10px;
+    cursor: pointer;
+    outline: 0;
+    font-size: medium;
+  }
+
+  .btns:hover {
+    background-color: red;
+  }
+
+  .navbar {
+    list-style: none;
+    text-align: right;
+  }
+
+  h2 {
+    justify-content: center;
+    text-align: center;
+    color: white;
+    top: 25%;
+    font-size: 3em;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    position: relative;
+  }
+
+  .row {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    top: 35%;
+    position: relative;
+    left: 50%;
+    display: flex;
+    transform: translateX(-50%);
+  }
+
+  h3 {
+    color: white;
+    text-align: center;
+    position: relative;
+    top: 10%;
+    font-size: 50px;
+  }
+
+  .rowOfProject {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    top: 15%;
+    position: relative;
+    left: 50%;
+    display: flex;
+    transform: translateX(-50%);
+  }
+
+  .pageTwo {
+    width: auto;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 2.2)),
+      url("https://images.unsplash.com/photo-1518773553398-650c184e0bb3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+    background-size: cover;
+  }
+
+  .projectOne {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/Messenger_Firestore_MVVM/master/images/1.jpg");
+    background-size: cover;
+    width: 250px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin-left: 20px;
+    margin-right: 20px;
+
+    /* cover will spread the image  */
+  }
+
+  .projectTwo {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/QuizApp_Firebase_MVVM/master/images/two.jpg");
+    background-size: cover;
+    width: 250px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin-left: 20px;
+    margin-right: 20px;
+
+    /* cover will spread the image  */
+  }
+
+  .projectThree {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/FlutterNewsApp/master/images/2730.jpg");
+    background-size: cover;
+    width: 250px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin-left: 20px;
+    margin-right: 20px;
+
+    /* cover will spread the image  */
+  }
+
+  .projectFour {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/MoviesApp_TMDB_CLIENT/master/images/24852.jpg");
+    background-size: cover;
+    width: 250px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  img {
+    width: 100px;
+    height: auto;
+    margin-right: 30px;
+  }
+
+  img:hover {
+    transform: translateY(-10px);
+  }
+
+  .talkwithpage {
+    background-position: center;
+    background-size: cover;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+    display: block;
+    background-color: burlywood;
+    text-align: center;
+    width: auto;
+  }
+
+  .contact {
+    width: auto;
+    height: 5vh;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    justify-content: center;
+    padding-left: 10px;
+
+    align-items: center;
+    margin-top: 40px;
+  }
+
+  .contactE {
+    width: 300px;
+    height: 5vh;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    padding-left: 10px;
+
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+  }
+
+  .contactM {
+    text-align: left;
+    padding: 0.4em;
+    padding-bottom: 140px;
+    width: 400px;
+    height: 2vh;
+    outline: none;
+    border: none;
+    padding-left: 10px;
+    padding-top: 10px;
+    border-radius: 20px;
+  }
+
+  .submit {
+    width: auto;
+    height: auto;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 20px;
+    top: 30%;
+    position: relative;
+    left: 50%;
+    font-size: 1em;
+    background-color: palegoldenrod;
+    transform: translateX(-50%);
+  }
+
+  .send {
+    background-color: black;
+    border-radius: 20px;
+    color: white;
+    width: 100px;
+    padding: 10px;
+    outline: none;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+
+  .send:hover {
+    background-color: rgb(255, 0, 0);
+  }
+
+  .page3 {
+    width: auto;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("https://github.com/developersamuelakram/First-WebPage---HTML-CSS/blob/master/page2.jpg?raw=true");
+    background-size: cover;
+    height: 90vh;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .page2Heading {
+    color: white;
+    text-align: center;
+    position: relative;
+    top: 20%;
+
+    font-size: 4em;
+  }
+
+  .page2para {
+    font-size: 1em;
+    color: white;
+    text-align: center;
+    top: 26%;
+    position: relative;
+  }
+
+  .wrapperForLearn {
+    text-align: center;
+    position: relative;
+    top: 30%;
+  }
+
+  /* for wrapping the div of page 2 git button */
+  .wrapper {
+    text-align: center;
+    margin-top: 20px;
+    position: relative;
+    top: 20%;
+  }
+
+  .btnGit {
+    border-radius: 20px;
+    color: white;
+    width: 120px;
+    height: 40px;
+    background-color: black;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .btnGit:hover {
+    background-color: red;
+  }
+
+  .btnLearn {
+    position: relative;
+    top: 90%;
+    border-radius: 20px;
+    color: white;
+    width: 120px;
+    height: 40px;
+    background-color: black;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .btnLearn:hover {
+    background-color: red;
+  }
 }
 
-.btns {
-  height: 40px;
-  background-color: black;
-  width: 100px;
-  color: white;
-  border-radius: 30px;
-  margin-left: 35px;
-  margin-top: 10px;
-  cursor: pointer;
-  outline: 0;
-  font-size: medium;
-}
+/* only for mobile */
 
-.btns:hover {
-  background-color: red;
-}
+@media screen and (min-width: 400px) and (max-width: 900px) {
+  * {
+    margin: 0;
+    padding: 0;
+    font-family: "Roboto", sans-serif;
+  }
+  .container {
+    width: 200%;
+    height: auto;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("https://github.com/developersamuelakram/First-WebPage---HTML-CSS/blob/master/myimage.jpg?raw=true");
+    background-position: center;
+    background-size: cover;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+  }
 
-.navbar {
-  list-style: none;
-  text-align: right;
-}
+  .btns {
+    height: 40px;
+    background-color: black;
+    width: 100px;
+    color: white;
+    border-radius: 30px;
+    margin-left: 35px;
+    margin-top: 10px;
+    cursor: pointer;
+    outline: 0;
+    font-size: medium;
+  }
 
-h2 {
-  justify-content: center;
-  text-align: center;
-  color: white;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  margin-top: 70px;
-}
+  .btns:hover {
+    background-color: red;
+  }
 
-.row {
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  justify-content: center;
-  top: 5%;
-  position: relative;
-  left: 50%;
-  display: flex;
-  transform: translateX(-50%);
-}
+  .navbar {
+    list-style: none;
+    text-align: right;
+  }
 
-h3 {
-  color: white;
-  text-align: center;
-  padding-top: 30px;
-  font-size: 50px;
-}
+  h2 {
+    justify-content: center;
+    text-align: center;
+    color: white;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
+    margin-top: 70px;
+  }
 
-.pageTwo {
-  width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 2.2)),
-    url("https://images.unsplash.com/photo-1518773553398-650c184e0bb3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
-  background-size: cover;
-}
+  .row {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    top: 5%;
+    position: relative;
+    left: 50%;
+    display: flex;
+    transform: translateX(-50%);
+  }
 
-.projectOne {
-  background-image: url("https://raw.githubusercontent.com/developersamuelakram/Messenger_Firestore_MVVM/master/images/1.jpg");
-  background-size: cover;
-  width: 200px;
-  height: 50vh;
-  background-position: center;
-  border-radius: 4px;
-  border: 10px solid rgb(255, 255, 255);
-  margin: 20px;
+  h3 {
+    color: white;
+    text-align: center;
+    padding-top: 30px;
+    font-size: 50px;
+  }
 
-  /* cover will spread the image  */
-}
+  .pageTwo {
+    width: 200%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 2.2)),
+      url("https://images.unsplash.com/photo-1518773553398-650c184e0bb3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+    background-size: cover;
+  }
 
-.projectTwo {
-  background-image: url("https://raw.githubusercontent.com/developersamuelakram/QuizApp_Firebase_MVVM/master/images/two.jpg");
-  background-size: cover;
-  width: 200px;
-  height: 50vh;
-  background-position: center;
-  border-radius: 4px;
-  border: 10px solid rgb(255, 255, 255);
-  margin: 20px;
+  .rowOfProject {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    top: 15%;
+    position: relative;
+    left: 50%;
+    display: flex;
+    transform: translateX(-50%);
+  }
 
-  /* cover will spread the image  */
-}
+  .projectOne {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/Messenger_Firestore_MVVM/master/images/1.jpg");
+    background-size: cover;
+    width: 200px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin: 20px;
+  }
 
-.projectThree {
-  background-image: url("https://raw.githubusercontent.com/developersamuelakram/FlutterNewsApp/master/images/2730.jpg");
-  background-size: cover;
-  width: 200px;
-  height: 50vh;
-  background-position: center;
-  border-radius: 4px;
-  border: 10px solid rgb(255, 255, 255);
-  margin: 20px;
+  .projectTwo {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/QuizApp_Firebase_MVVM/master/images/two.jpg");
+    background-size: cover;
+    width: 200px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin: 20px;
+  }
 
-  /* cover will spread the image  */
-}
+  .projectThree {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/FlutterNewsApp/master/images/2730.jpg");
+    background-size: cover;
+    width: 200px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin: 20px;
 
-.projectFour {
-  background-image: url("https://raw.githubusercontent.com/developersamuelakram/MoviesApp_TMDB_CLIENT/master/images/24852.jpg");
-  background-size: cover;
-  width: 200px;
-  height: 50vh;
-  background-position: center;
-  border-radius: 4px;
-  border: 10px solid rgb(255, 255, 255);
-  margin: 20px;
-}
+    /* cover will spread the image  */
+  }
 
-.page3 {
-  width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("https://raw.githubusercontent.com/developersamuelakram/First-WebPage---HTML-CSS/master/page2.jpg");
-  background-position: center;
-  background-size: cover;
-  padding-left: 8%;
-  padding-right: 8%;
-  box-sizing: border-box;
-  display: block;
-}
+  .projectFour {
+    background-image: url("https://raw.githubusercontent.com/developersamuelakram/MoviesApp_TMDB_CLIENT/master/images/24852.jpg");
+    background-size: cover;
+    width: 200px;
+    height: 50vh;
+    background-position: center;
+    border-radius: 4px;
+    border: 10px solid rgb(255, 255, 255);
+    margin: 20px;
+  }
 
-img {
-  width: 100px;
-  height: auto;
-  margin-right: 30px;
-}
+  .page3 {
+    width: 200%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url("https://raw.githubusercontent.com/developersamuelakram/First-WebPage---HTML-CSS/master/page2.jpg");
+    background-position: center;
+    background-size: cover;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+    display: block;
+  }
 
-img:hover {
-  transform: translateY(-10px);
-}
+  img {
+    width: 75px;
+    height: auto;
+    margin-right: 30px;
+  }
 
-image2:hover {
-  transform: translateY(-10px);
-}
+  img:hover {
+    transform: translateY(-10px);
+  }
 
-image3:hover {
-  transform: translateY(-10px);
-}
+  .imageClass {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 
-image4:hover {
-  transform: translateY(-10px);
-}
+  .talkwithpage {
+    width: 200%;
+    height: auto;
+    background-color: rgb(241, 200, 148);
 
-.talkwithpage {
-  background-position: center;
-  background-size: cover;
-  padding-left: 8%;
-  padding-right: 8%;
-  box-sizing: border-box;
-  display: block;
-  background-color: burlywood;
-  text-align: center;
-}
+    background-position: center;
+    background-size: cover;
+    padding-left: 8%;
+    padding-right: 8%;
+    box-sizing: border-box;
+    display: block;
+  }
 
-.contact {
-  width: 300px;
-  height: 5vh;
-  border-radius: 20px;
-  border: none;
-  outline: none;
-  justify-content: center;
-  padding-left: 10px;
+  .contact {
+    width: 300px;
+    height: 5vh;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    justify-content: center;
+    padding-left: 10px;
 
-  align-items: center;
-  margin-top: 40px;
-}
+    align-items: center;
+    margin-top: 40px;
+  }
 
-.contactE {
-  width: 300px;
-  height: 5vh;
-  border-radius: 20px;
-  border: none;
-  outline: none;
-  padding-left: 10px;
+  .contactE {
+    width: 300px;
+    height: 5vh;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+    padding-left: 10px;
 
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-}
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+  }
 
-.contactM {
-  text-align: left;
-  padding: 0.4em;
-  padding-bottom: 140px;
-  width: 400px;
-  height: 2vh;
-  outline: none;
-  border: none;
-  padding-left: 10px;
-  padding-top: 10px;
-  border-radius: 20px;
-}
+  .contactM {
+    text-align: left;
+    padding: 0.4em;
+    padding-bottom: 140px;
+    width: 400px;
+    height: 2vh;
+    outline: none;
+    border: none;
+    padding-left: 10px;
+    padding-top: 10px;
+    border-radius: 20px;
+  }
 
-.submit {
-  width: auto;
-  height: auto;
-  text-align: center;
-  margin: 0;
-  padding-bottom: 20px;
-  top: 30%;
-  position: relative;
-  left: 50%;
-  font-size: 1em;
-  background-color: palegoldenrod;
-  transform: translateX(-50%);
-}
+  .submit {
+    width: auto;
+    height: auto;
+    text-align: center;
+    margin: 0;
+    padding-bottom: 20px;
+    top: 30%;
+    position: relative;
+    left: 50%;
+    font-size: 1em;
+    background-color: palegoldenrod;
+    transform: translateX(-50%);
+  }
 
-.send {
-  background-color: black;
-  border-radius: 20px;
-  color: white;
-  width: 100px;
-  padding: 10px;
-  outline: none;
-  margin-bottom: 20px;
-  cursor: pointer;
-}
+  .send {
+    background-color: black;
+    border-radius: 20px;
+    color: white;
+    width: 100px;
+    padding: 10px;
+    outline: none;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
 
-.send:hover {
-  background-color: rgb(255, 0, 0);
-}
+  .send:hover {
+    background-color: rgb(255, 0, 0);
+  }
 
-.page2Heading {
-  color: white;
-  text-align: center;
-  padding-top: 150px;
-  font-size: 4em;
-}
+  .page2Heading {
+    color: white;
+    text-align: center;
+    padding-top: 150px;
+    font-size: 4em;
+  }
 
-.page2para {
-  font-size: 1em;
-  color: white;
-  text-align: center;
-}
+  .page2para {
+    font-size: 1em;
+    color: white;
+    text-align: center;
+  }
 
-/* for wrapping the div of page 3 learning button */
-.wrapper {
-  text-align: center;
-  margin-top: 20px;
-}
+  /* for wrapping the div of page 3 learning button */
+  .wrapperForLearn {
+    text-align: center;
+    position: relative;
+    top: 10%;
+  }
 
-.btnLearn {
-  position: relative;
-  top: 50%;
-  border-radius: 20px;
-  color: white;
-  width: 120px;
-  height: 40px;
-  background-color: black;
-  outline: none;
-  cursor: pointer;
-}
+  .btnLearn {
+    position: relative;
+    top: 50%;
+    border-radius: 20px;
+    color: white;
+    width: 120px;
+    height: 40px;
+    background-color: black;
+    outline: none;
+    cursor: pointer;
+  }
 
-.btnLearn:hover {
-  background-color: red;
+  .btnGits {
+    position: relative;
+    top: 50%;
+    border-radius: 20px;
+    color: white;
+    width: 120px;
+    height: 40px;
+    background-color: black;
+    outline: none;
+    cursor: pointer;
+    margin-top: 50px;
+  }
+
+  .btnLearn:hover {
+    background-color: red;
+  }
+
+  .centerForm {
+    text-align: center;
+  }
+
+  /* for wrapping the div of page 2 git button */
+  .wrapper {
+    text-align: center;
+    margin-top: 20px;
+    position: relative;
+    top: 15%;
+  }
+
+  .btnGit {
+    border-radius: 20px;
+    color: white;
+    width: 120px;
+    height: 40px;
+    background-color: black;
+    outline: none;
+    cursor: pointer;
+  }
+
+  .btnGit:hover {
+    background-color: red;
+  }
 }
